small addition to our content

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>heloo hutiyo</title>
+	<title>hello world</title>
 </head>
 <body>
-<h1>hellloo hutiyo ke raja </h1>
+<h1>hello world , it's been a great course </h1>
 </body>
 </html>
